# redshirt

./: Cargo.toml
core/: Cargo.toml
core/src/: system.rs
core/src/scheduler/: processes.rs
docs/: README.md  diagrams.md
interfaces/pipeline/: Cargo.toml
interfaces/pipeline/src/: ffi.rs  lib.rs
kernel/cli/: Cargo.toml
kernel/cli/src/: main.rs
kernel/hosted-pipeline/: Cargo.toml
kernel/hosted-pipeline/src/: lib.rs
modules/: Cargo.toml
modules/pipers/: Cargo.toml
modules/pipers/src/: main.rs
