[workspace]
members = [
    "core",
    "core-proc-macros",
    "kernel/cli",
    "kernel/hosted-log",
    "kernel/hosted-random",
    "kernel/hosted-tcp",
    "kernel/hosted-time",
    "kernel/standalone",
    # "kernel/hosted-pipeline",
    "interfaces/hardware",
    "interfaces/interface",
    "interfaces/loader",
    "interfaces/log",
    "interfaces/pci",
    "interfaces/random",
    "interfaces/syscalls",
    "interfaces/system-time",
    "interfaces/tcp",
    "interfaces/time",
    "interfaces/pipeline",
]

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
panic = 'abort'

[profile.dev.package.hashbrown]
opt-level = 3
[profile.dev.package.rand_jitter]
opt-level = 3
[profile.dev.package.wasmi]
opt-level = 3
[profile.dev.package.wasmi-validation]
opt-level = 3
[profile.dev.package.wat]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
