[package]
name = "redshirt-pipeline-interface"
version = "0.1.0"
authors = ["Loredana <loredana.cirstea@gmail.com>"]
edition = "2018"


[dependencies]
futures = { version = "0.3.1", default-features = false }
redshirt-syscalls = { path = "../syscalls", default-features = false }
redshirt-log-interface = { path = "../log" }
parity-scale-codec = { version = "1.0.5", default-features = false, features = ["derive"] }
